namespaces/live.cloud-platform.service.justice.gov.uk/manage-people-on-probation-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "manage-people-on-probation-prototype"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage-people-on-probation"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Manage people on probation: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/manage-people-on-probation-prototype"
    cloud-platform.justice.gov.uk/team-name: "manage-people-on-probation-prototype"
    cloud-platform.justice.gov.uk/review-after: ""
